--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Classes</title>
-    <meta name="description" content="Learn the basics of algebra—focused on common mathematical relationships, by experts at Interstellar Math."/>
+    <meta name="description" content="Learn the basics of algebra—focused on common mathematical relationships, by experts at Super Learning Math."/>
     <link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <!-- Load the site scripts-->
@@ -70,9 +70,6 @@
           </div>
           <br>
           <br>
-          <p class="text-center">
-            <iframe src="https://hub.alienhub.xyz/show?utm_medium=interstellar" title="Alienhub Advertisement" scrolling="no" width="450" height="150" frameborder="0"></iframe>
-          </p>
           <br>
           <br>
           <br>
@@ -81,7 +78,7 @@
       </div>
       <script>
         document.querySelector(".discord-btn2").addEventListener("click", () => {
-          window.open("https://discord.gg/gointerstellar", "_blank");
+          window.open("https://discord.gg/24AzMZgTE5", "_blank");
         });
       </script>
       <script>
