--- a/static/web.html
+++ b/static/web.html
@@ -25,7 +25,7 @@
    <body>
     <div class="header2">
       <br>
-      <a href="/../" class="logo">Interstellar</a>
+      <a href="/../" class="logo">The Unblocked Hub</a>
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="play">Games</a>
