--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="header2">
       <br>
-      <a href="/../" class="logo">Interstellar</a>
+      <a href="/../" class="logo">The Unblocked Hub</a>
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="play">Games</a>
@@ -64,7 +64,7 @@
         <div class="container">
           <div class="mainhead">
             <div class="title">
-              <h1>Interstellar</h1>
+              <h1>The Unblocked Hub</h1>
             </div>
             <button class="discord-btn2">Join our Discord</button>
           </div>
