--- a/static/settings.html
+++ b/static/settings.html
@@ -88,9 +88,9 @@
       <div class="card">
         <div class="container">
           <div class="title">
-            <h4><b>Coming Soon</b></h4>
-          </div>
-          <p>Coming Soon! Any Suggestions?</p>
+            <h4><Report A Bug</b></h4>
+          <div class="button-group">
+            <button onclick="window.open('https://forms.gle/PmYG2crJGaYCiWmN9', '_blank');">Report A Bug</button>
         </div>
       </div>
       <div class="card">
