--- a/static/settings.html
+++ b/static/settings.html
@@ -21,7 +21,7 @@
 <body>
   <div class="header2">
     <br>
-    <a href="/../" class="logo">The Unblocked Hub</a>
+    <a href="/../" class="logo">Project Luma</a>
     <div class="header2-right">
       <a href="web">Proxy</a>
       <a href="play">Games</a>
