--- a/static/apps.html
+++ b/static/apps.html
@@ -32,7 +32,7 @@
   <body>
     <div class="header2">
       <br />
-      <a class="logo" href="/../"> The Unblocked Hub </a>
+      <a class="logo" href="/../">Project Luma</a>
       <div class="header2-right">
         <a href="web"> Proxy </a>
         <a href="play"> Games </a>
