--- a/static/index.html
+++ b/static/index.html
@@ -80,5 +80,10 @@
       </div>
       <canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1920" height="942"></canvas>
       </div>
+    <div class="message animate-bottom">
+    <p class="description">
+      Please wait a moment. Our servers may be under high load causing some Latency (Lag).<br>If you have any issues, please <a class="discord-link" href="https://discord.gg/24AzMZgTE5" target="_blank">join our Discord server</a>.
+    </p>
+  </div>
     </body>
 </html>
