--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,7 @@
       </div>
     <div class="message animate-bottom">
     <p class="description">
-      Please wait a moment. Our servers may be under high load causing some Latency (Lag).<br>If you have any issues, please <a class="discord-link" href="https://discord.gg/24AzMZgTE5" target="_blank">join our Discord server</a>.
+      Notice: Some Games may only work on certain browsers</a>.
     </p>
   </div>
     </body>
