--- a/static/apps.html
+++ b/static/apps.html
@@ -64,13 +64,13 @@
       });
     </script>
     <br />
-    <div class="row">
+     <div class="row">
       <div class="span1">
-        <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://9anime.to')">
-            <img loading="lazy" src="/assets/images/icons/apps/9anime.png" style="border-radius: 25px;" />
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a onclick="alert('The roblox/now.gg bypass is currently broken and will need to be fixed by the creators. We dont own roblox or now.gg, so please do not bother us about this or you will be muted in our discord server.')">
+            <img loading="lazy" src="/assets/images/icons/now-gg.png" style="border-radius: 25px;" />
           </a>
-          <p3> 9Anime </p3>
+          <p3 style="color:red">Now.GG</p3>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
           <a onclick="go('https://chatgptproxy.me')">
             <img loading="lazy" src="/assets/images/icons/chatgpt.png" style="border-radius: 25px;" />
           </a>
-          <p3> ChatGPT Proxy </p3>
+          <p3> ChatGPT </p3>
         </div>
       </div>
     </div>
@@ -137,16 +137,6 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://fifarosters.com/')">
-            <img loading="lazy" src="/assets/images/icons/fifa.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Fifa Rosters </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://replit.com/@cooleddie001/firefox?embed=true')">
             <img loading="lazy" src="/assets/images/icons/apps/firefox.png" style="border-radius: 25px;" />
           </a>
@@ -167,7 +157,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://play.geforcenow.com'); gfn()">
+          <a class="game" onclick="go('https://play.geforcenow.com')">
             <img loading="lazy" src="/assets/images/icons/apps/geforce-now.png" style="border-radius: 25px;" />
           </a>
           <p3> Geforce NOW </p3>
@@ -207,7 +197,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="alert('It is currently not possible to add Instagram, The login feature will not work.')">
+          <a class="game" onclick="go('https://www.instagram.com')">
             <img loading="lazy" src="/assets/images/icons/apps/instagram.png" style="border-radius: 25px;" />
           </a>
           <p3 style="color:red"> Instagram </p3>
@@ -230,7 +220,7 @@
           <a class="game" onclick="go('https://paramountplus.com')">
             <img loading="lazy" src="/assets/images/icons/apps/paramount.png" style="border-radius: 25px;" />
           </a>
-          <p3> Paramount Plus </p3>
+          <p3> Paramount+ </p3>
         </div>
       </div>
     </div>
@@ -277,7 +267,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://nowgg.me')">
+          <a class="game" onclick="go('https://www.snapchat.com/en-US')">
             <img loading="lazy" src="/assets/images/icons/apps/snapchat.png" style="border-radius: 25px;" />
           </a>
           <p3> Snapchat </p3>
