--- a/static/apps.html
+++ b/static/apps.html
@@ -64,16 +64,7 @@
       });
     </script>
     <br />
-     <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="alert('The roblox/now.gg bypass is currently broken and will need to be fixed by the creators. We dont own roblox or now.gg, so please do not bother us about this or you will be muted in our discord server.')">
-            <img loading="lazy" src="/assets/images/icons/now-gg.png" style="border-radius: 25px;" />
-          </a>
-          <p3 style="color:red">Now.GG</p3>
-        </div>
-      </div>
-    </div>
+
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
@@ -196,21 +187,11 @@
     </div>
     <div class="row">
       <div class="span1">
-        <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://www.instagram.com')">
-            <img loading="lazy" src="/assets/images/icons/apps/instagram.png" style="border-radius: 25px;" />
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a onclick="alert('The roblox/now.gg bypass is currently broken and will need to be fixed by the creators. We dont own roblox or now.gg, so please do not bother us about this or you will be muted in our discord server.')">
+            <img loading="lazy" src="/assets/images/icons/now-gg.png" style="border-radius: 25px;" />
           </a>
-          <p3 style="color:red"> Instagram </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://messenger.com/')">
-            <img loading="lazy" src="/assets/images/icons/apps/messenger.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Messenger </p3>
+          <p3> Now.GG </p3>
         </div>
       </div>
     </div>
@@ -377,16 +358,6 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://web.whatsapp.com/')">
-            <img loading="lazy" src="/assets/images/icons/apps/whatsapp.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Whatsapp </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://zoro.to')">
             <img loading="lazy" src="/assets/images/icons/apps/zoroto.png" style="border-radius: 25px;" />
           </a>
@@ -394,10 +365,5 @@
         </div>
       </div>
     </div>
-    <script>
-      function gfn() {
-        alert('Geforce NOW is currently having some issues for some users, we are aware of this issue and are working to fix it.')
-      }
-    </script>
   </body>
 </html>
