--- a/static/apps.html
+++ b/static/apps.html
@@ -188,7 +188,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="alert('The roblox/now.gg bypass is currently broken and will need to be fixed by the creators. We dont own roblox or now.gg, so please do not bother us about this or you will be muted in our discord server.')">
+          <a class="game" onclick="go('https://www.now.gg/play/browse/')">
             <img loading="lazy" src="/assets/images/icons/now-gg.png" style="border-radius: 25px;" />
           </a>
           <p3> Now.GG </p3>
