--- a/static/apps.html
+++ b/static/apps.html
@@ -237,6 +237,16 @@
     </div>
     <div class="row">
       <div class="span1">
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a class="game" onclick="go('https://binbashbanana.github.io/webretro/')">
+            <img loading="lazy" src="/assets/images/icons/retroarch.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Retro Arch </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
         <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://www.snapchat.com/en-US')">
             <img loading="lazy" src="/assets/images/icons/apps/snapchat.png" style="border-radius: 25px;" />
@@ -322,6 +332,16 @@
             <img loading="lazy" src="/assets/images/icons/apps/vscode.png" style="border-radius: 25px;" />
           </a>
           <p3> VS Code </p3>
+        </div>
+      </div>
+    </div>
+     <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a onclick="go('https://nowgg.me/interstellar.html')">
+            <img loading="lazy" src="/assets/images/icons/worldbox.png" style="border-radius: 25px;" />
+          </a>
+          <p3> World Box </p3>
         </div>
       </div>
     </div>
