--- a/static/play.html
+++ b/static/play.html
@@ -150,7 +150,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/phoenix-wright-ace-attorney/')">
+          <a onclick="go('https://kbhgames.com/game/ace-attorney')">
             <img loading="lazy" src="/assets/images/icons/aa.jpg" style="border-radius: 25px;" />
           </a>
           <p3> Ace Attorney </p3>
@@ -160,7 +160,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/animal-crossing-wild-world/')">
+          <a onclick="go('https://www.retrogames.cc/nds-games/welcome-to-animal-crossing-wild-world-usa.html')">
             <img loading="lazy" src="/assets/images/icons/acww.png" style="border-radius: 25px;" />
           </a>
           <p3> AC - Wild World </p3>
@@ -300,6 +300,16 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a onclick="go('https://cattn.github.io/gba/')">
+            <img loading="lazy" src="/assets/images/icons/classic-nintendo.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Classic Nintendo </p3>
+        </div>
+      </div>
+    </div> 
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
           <a onclick="go('https://chess.com')">
             <img loading="lazy" src="/assets/images/icons/chess.png" style="border-radius: 25px;" />
           </a>
@@ -423,7 +433,7 @@
           <a class="game" onclick="go('http://raw.githack.com/3kh0/3kh0-assets/main/minecraft-18/index.html')">
             <img loading="lazy" src="/assets/images/icons/mc.webp" style="border-radius: 25px;" />
           </a>
-          <p3> Eaglercraft </p3>
+          <p3> Eaglecraft </p3>
         </div>
       </div>
     </div>
@@ -550,16 +560,6 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://cattn.github.io/gba/')">
-            <img loading="lazy" src="/assets/images/icons/classic-nintendo.png" style="border-radius: 25px;" />
-          </a>
-          <p3> GBA Games </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy" style="padding-top: 5px;">
           <a onclick="go('https://games.crazygames.com/en_US/haunted-school---horror-game/index.html')">
             <img loading="lazy" src="/assets/images/icons/na.png" style="border-radius: 25px;" />
           </a>
@@ -660,7 +660,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/mario-kart-64/')">
+          <a onclick="go('https://www.miniplay.com/game/mario-kart-64')">
             <img loading="lazy" src="/assets/images/icons/mario-kart-64.jpg" style="border-radius: 25px;" />
           </a>
           <p3> Mario Kart 64 </p3>
@@ -890,7 +890,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/pokemon-heartgold-version/')">
+          <a onclick="go('https://playretrogames.online/game/play/play-pokemon-heart-gold/')">
             <img loading="lazy" src="/assets/images/icons/heartgold.jpg" style="border-radius: 25px;" />
           </a>
           <p3> Pokemon Heart Gold </p3>
@@ -910,7 +910,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/pokemon-light-platinum/')">
+          <a onclick="go('https://emulatorgames.onl/gba-pokemon-light-platinum')">
             <img loading="lazy" src="/assets/images/icons/lp.webp" style="border-radius: 25px;" />
           </a>
           <p3> PM: Light Platinum </p3>
@@ -1250,7 +1250,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/the-simpsons-game/')">
+          <a onclick="go('https://www.playemulator.com/nds-online/the-simpsons-game/')">
             <img loading="lazy" src="/assets/images/icons/the-simpsons-game.png" style="border-radius: 25px;" />
           </a>
           <p3> The Simpsons </p3>
@@ -1280,7 +1280,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/tony-hawks-pro-skater-2/')">
+          <a onclick="go('https://www.retrogames.cc/psx-games/tony-hawks-pro-skater-2.html')">
             <img loading="lazy" src="/assets/images/icons/thps2.jpeg" style="border-radius: 25px;" />
           </a>
           <p3> TH's Pro Skater 2 </p3>
@@ -1290,7 +1290,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/tony-hawks-pro-skater-3/')">
+          <a onclick="go('https://www.retrogames.cc/psx-games/tony-hawks-pro-skater-3.html')">
             <img loading="lazy" src="/assets/images/icons/thps3.jpeg" style="border-radius: 25px;" />
           </a>
           <p3> TH's Pro Skater 3 </p3>
@@ -1300,7 +1300,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://arcadespot.com/game/tony-hawks-pro-skater-4/')">
+          <a onclick="go('https://www.retrogames.cc/psx-games/tony-hawks-pro-skater-4.html')">
             <img loading="lazy" src="/assets/images/icons/thps4.jpeg" style="border-radius: 25px;" />
           </a>
           <p3> TH's Pro Skater 4 </p3>
@@ -1310,8 +1310,8 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          
-            <img loading="lazy" src="/assets/images/icons/na.png" style="border-radius: 25px;" />
+          <a onclick="go('https://www.rossipotti.de/ausgabe28/tetris/index.htmll')">
+            <img loading="lazy" src="/assets/images/icons/twitchtetris.png" style="border-radius: 25px;" />
           </a>
           <p3> Twitch Tetris </p3>
         </div>
