--- a/static/settings.html
+++ b/static/settings.html
@@ -22,7 +22,7 @@
 <body>
   <div class="header2">
     <br>
-    <a href="/../" class="logo">Interstellar</a>
+    <a href="/../" class="logo">Project Luma</a>
     <div class="header2-right">
       <a href="web">Proxy</a>
       <a href="play">Games</a>
