--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="header2">
       <br>
-      <a href="/../" class="logo">Interstellar</a>
+      <a href="/../" class="logo">Project Luma</a>
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="play">Games</a>
@@ -75,7 +75,7 @@
       </div>
       <script>
         document.querySelector(".discord-btn2").addEventListener("click", () => {
-          window.open("https://discord.gg/gointerstellar", "_blank");
+          window.open("https://discord.gg/24AzMZgTE5", "_blank");
         });
       </script>
       <script>
