--- a/static/play.html
+++ b/static/play.html
@@ -70,7 +70,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a class="game" onclick="go('https://forms.gle/iZJe5eB6KJeGe4Am8')">
+          <a class="game" onclick="go('https://forms.gle/UB2HxwCfe7qdnkuV6')">
             <img loading="lazy" src="/assets/images/icons/request.webp" style="border-radius: 25px;" />
           </a>
           <p3> Request A Game! </p3>
