--- a/static/chat.html
+++ b/static/chat.html
@@ -18,7 +18,7 @@
    <body>
     <div class="header2">
       <br>
-      <a href="/../" class="logo">Interstellar</a>
+      <a href="/../" class="logo">Project Luma</a>
       <div class="header2-right">
         <a href="web">Proxy</a>
         <a href="play">Games</a>
@@ -33,7 +33,7 @@
     <br>
   <html>
     <iframe
-      src="https://e.widgetbot.io/channels/938658733788131399/1001129016457166878/"
+      src="https://e.widgetbot.io/channels/1098073108717514818/1098073110420402340/"
       style="bottom: 0"
       style="border: 0px #ffffff none"
       name="myiFrame"
