--- a/static/404.html
+++ b/static/404.html
@@ -96,7 +96,7 @@
         <p>Oops! The page you're looking for doesn't exist.</p>
         <div class="button-group">
             <button onclick="location.href='/';">Go back home</button>
-            <button onclick="window.open('https://forms.gle/PmYG2crJGaYCiWmN9', '_blank');">Report this issue</button>
+            <button onclick="window.open('https://forms.gle/6MUv5KhHmRaA9UjBA', '_blank');">Report this issue</button>
         </div>
     </div>
 </body>
