--- a/static/apps.html
+++ b/static/apps.html
@@ -4,12 +4,12 @@
     <title>Classes</title>
     <link href="assets/images/branding/favicon/favicon.png" rel="icon" type="image/x-icon" />
     <!-- Main Scripts-->
-    <script src="resources/js/go.js"></script>
+     <script src="resources/js/index.js"></script>
     <script src="./uv/uv.bundle.js"></script>
     <script src="./uv/uv.config.js"></script>
-    <script src="resources/js/index.js"></script>
-    <link href="assets/css/particles.css" rel="stylesheet">
     <script src="resources/js/visit.js"></script>
+    <script src="resources/js/go.js"></script>
+    <link href="assets/css/particles.css" rel="stylesheet">
     <!-- Extra Scripts-->
     <script src="assets/js/panic.js"></script>
     <script src="assets/js/search.js"></script>
@@ -34,7 +34,7 @@
     <!-- Nav Bar-->
     <div class="header2">
       <br />
-      <a class="logo" href="/../"> Interstellar </a>
+      <a class="logo" href="/../"> Project Luma </a>
       <div class="header2-right">
         <a href="web"> Proxy </a>
         <a href="play"> Games </a>
@@ -104,7 +104,7 @@
           <a onclick="go('https://chatgptproxy.me')">
             <img loading="lazy" src="/assets/images/icons/chatgpt.png" style="border-radius: 25px;" />
           </a>
-          <p3> ChatGPT Proxy </p3>
+          <p3>ChatGPT</p3>
         </div>
       </div>
     </div>
@@ -125,16 +125,6 @@
             <img loading="lazy" src="/assets/images/icons/apps/discord.jpg" style="border-radius: 25px;" />
           </a>
           <p3>Discord</p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
-          <a class="game" onclick="visit('https://discord.com')">
-            <img loading="lazy" src="/assets/images/icons/apps/discord.jpg" style="border-radius: 25px;" />
-          </a>
-          <p3> Discord - Login</p3>
         </div>
       </div>
     </div>
