--- a/static/settings.html
+++ b/static/settings.html
@@ -9,13 +9,14 @@
    <script async src="/assets/js/panic.js"></script>
   <script src="assets/js/themecontrol.js"></script>
  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-WKJQ5QHQTJ');
+  gtag('config', 'G-3KEJ0HLB78');
 </script>
 </head>
 
