--- a/static/play.html
+++ b/static/play.html
@@ -18,12 +18,13 @@
     <link href="assets/css/apps.css" rel="stylesheet" />
     <link href="assets/css/searchbar.css" rel="stylesheet" />
    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-WKJQ5QHQTJ');
+  gtag('config', 'G-3KEJ0HLB78');
 </script>
   </head>
   <body>
