--- a/static/loading.html
+++ b/static/loading.html
@@ -5,6 +5,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Roboto&display=swap" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-WKJQ5QHQTJ');
+</script>
   <style>
 
     body {
@@ -91,7 +99,7 @@
   <div id="loader"></div>
   <div class="message animate-bottom">
     <p class="description">
-      Please wait a moment. Our servers may be under high load causing some extended wait times.<br>If you have any issues, please <a class="discord-link" href="https://discord.gg/gointerstellar" target="_blank">join our Discord server</a>.
+      Please wait a moment. Our servers may be under high load causing some extended loading time.<br>If you have any issues, please <a class="discord-link" href="https://discord.gg/24AzMZgTE5" target="_blank">join our Discord server</a>.
     </p>
   </div>
 </body>
