--- a/static/apps.html
+++ b/static/apps.html
@@ -34,7 +34,7 @@
     <!-- Nav Bar-->
     <div class="header2">
       <br />
-      <a class="logo" href="/../"> Project Luma </a>
+      <a class="logo" href="/../"> Interstellar </a>
       <div class="header2-right">
         <a href="web"> Proxy </a>
         <a href="play"> Games </a>
@@ -68,16 +68,6 @@
       });
     </script>
     <br />
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://9anime.to')">
-            <img loading="lazy" src="/assets/images/icons/apps/9anime.png" style="border-radius: 25px;" />
-          </a>
-          <p3> 9Anime </p3>
-        </div>
-      </div>
-    </div>
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
