--- a/static/go.html
+++ b/static/go.html
@@ -5,12 +5,14 @@
     <link rel="shortcut icon" href="assets/images/branding/favicon/favicon.png" type="image/x-icon" />
     <script src="assets/js/panic.js"></script>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-WKJQ5QHQTJ');
+
+  gtag('config', 'G-3KEJ0HLB78');
 </script>
 <link rel="stylesheet" href="assets/css/nav.css" />
 
