--- a/static/cookieconsentpolicy.html
+++ b/static/cookieconsentpolicy.html
@@ -5,12 +5,13 @@
 	<title>Cookie Consent Policy</title>
 	<link rel="shortcut icon" href="assets/images/branding/favicon/interstellar.png" />
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-WKJQ5QHQTJ');
+
+  gtag('config', 'G-3KEJ0HLB78');
 </script>
 	<style>
 		body, html {
