--- a/static/chat.html
+++ b/static/chat.html
@@ -4,14 +4,14 @@
     <link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/favicon.png">
     <link rel="stylesheet" href="assets/css/nav.css" />
       <script src="assets/js/panic.js"></script>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-WKJQ5QHQTJ');
+  gtag('config', 'G-3KEJ0HLB78');
 </script>
   </head>
  	<!--NAVBAR-->
