--- a/static/apps.html
+++ b/static/apps.html
@@ -20,14 +20,14 @@
     <link href="assets/css/searchbar.css" rel="stylesheet" />
     <meta content="The best math tutoring!" name="description" />
     <link href="assets/images/branding/favicon/interstellar.png" rel="shortcut icon" type="image/x-icon" />
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-WKJQ5QHQTJ');
+  gtag('config', 'G-3KEJ0HLB78');
 </script>
   </head>
   <body>
