--- a/static/apps.html
+++ b/static/apps.html
@@ -131,6 +131,16 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
+          <a class="game" onclick="go('https://fifarosters.com/')">
+            <img loading="lazy" src="/assets/images/icons/fifa.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Fifa Rosters </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://replit.com/@cooleddie001/firefox?embed=true')">
             <img loading="lazy" src="/assets/images/icons/apps/firefox.png" style="border-radius: 25px;" />
           </a>
@@ -191,10 +201,30 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
+          <a class="game" onclick="alert('It is currently not possible to add Instagram, The login feature will not work.')">
+            <img loading="lazy" src="/assets/images/icons/apps/instagram.png" style="border-radius: 25px;" />
+          </a>
+          <p3 style="color:red"> Instagram </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
+          <a class="game" onclick="go('https://messenger.com/')">
+            <img loading="lazy" src="/assets/images/icons/apps/messenger.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Messenger </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://paramountplus.com')">
             <img loading="lazy" src="/assets/images/icons/apps/paramount.png" style="border-radius: 25px;" />
           </a>
-          <p3> Paramount+ </p3>
+          <p3> Paramount Plus </p3>
         </div>
       </div>
     </div>
@@ -241,7 +271,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://web.snapchat.com')">
+          <a class="game" onclick="go('https://nowgg.me')">
             <img loading="lazy" src="/assets/images/icons/apps/snapchat.png" style="border-radius: 25px;" />
           </a>
           <p3> Snapchat </p3>
@@ -255,6 +285,16 @@
             <img loading="lazy" src="/assets/images/icons/apps/soundcloud.jpg" style="border-radius: 25px;" />
           </a>
           <p3> Soundcloud </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
+          <a class="game" onclick="go('https://open.spotify.com')">
+            <img loading="lazy" src="/assets/images/icons/apps/spotify.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Spotify </p3>
         </div>
       </div>
     </div>
@@ -301,6 +341,16 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
+          <a class="game" onclick="go('https://twitter.com')">
+            <img loading="lazy" src="/assets/images/icons/apps/twitter.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Twitter </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://vscode.dev')">
             <img loading="lazy" src="/assets/images/icons/apps/vscode.png" style="border-radius: 25px;" />
           </a>
@@ -325,6 +375,16 @@
             <img loading="lazy" src="/assets/images/icons/apps/yt.png" style="border-radius: 25px;" />
           </a>
           <p3> YouTube </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy">
+          <a class="game" onclick="go('https://web.whatsapp.com/')">
+            <img loading="lazy" src="/assets/images/icons/apps/whatsapp.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Whatsapp </p3>
         </div>
       </div>
     </div>
