--- a/static/apps.html
+++ b/static/apps.html
@@ -131,16 +131,6 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://fifarosters.com/')">
-            <img loading="lazy" src="/assets/images/icons/fifa.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Fifa Rosters </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://replit.com/@cooleddie001/firefox?embed=true')">
             <img loading="lazy" src="/assets/images/icons/apps/firefox.png" style="border-radius: 25px;" />
           </a>
@@ -161,7 +151,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://play.geforcenow.com'); gfn()">
+          <a class="game" onclick="go('https://play.geforcenow.com')">
             <img loading="lazy" src="/assets/images/icons/apps/geforce-now.png" style="border-radius: 25px;" />
           </a>
           <p3> Geforce NOW </p3>
@@ -201,30 +191,10 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="alert('It is currently not possible to add Instagram, The login feature will not work.')">
-            <img loading="lazy" src="/assets/images/icons/apps/instagram.png" style="border-radius: 25px;" />
-          </a>
-          <p3 style="color:red"> Instagram </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://messenger.com/')">
-            <img loading="lazy" src="/assets/images/icons/apps/messenger.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Messenger </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
           <a class="game" onclick="go('https://paramountplus.com')">
             <img loading="lazy" src="/assets/images/icons/apps/paramount.png" style="border-radius: 25px;" />
           </a>
-          <p3> Paramount Plus </p3>
+          <p3> Paramount+ </p3>
         </div>
       </div>
     </div>
@@ -271,7 +241,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://nowgg.me')">
+          <a class="game" onclick="go('https://web.snapchat.com')">
             <img loading="lazy" src="/assets/images/icons/apps/snapchat.png" style="border-radius: 25px;" />
           </a>
           <p3> Snapchat </p3>
@@ -375,16 +345,6 @@
             <img loading="lazy" src="/assets/images/icons/apps/yt.png" style="border-radius: 25px;" />
           </a>
           <p3> YouTube </p3>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy">
-          <a class="game" onclick="go('https://web.whatsapp.com/')">
-            <img loading="lazy" src="/assets/images/icons/apps/whatsapp.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Whatsapp </p3>
         </div>
       </div>
     </div>
