--- a/static/play.html
+++ b/static/play.html
@@ -328,6 +328,26 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a onclick="go('https://computerclicker.dibiaseproductions.com/'); ab()">
+            <img loading="lazy" src="/assets/images/icons/ComputerClicker.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Computer Clicker </p3>
+        </div>
+      </div>
+    </div>       
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a onclick="go('https://controls.dibiaseproductions.com/'); ab()">
+            <img loading="lazy" src="/assets/images/icons/Controls.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Controls </p3>
+        </div>
+      </div>
+    </div>    
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
           <a onclick="go('https://orteil.dashnet.org/cookieclicker/'); ab()">
             <img loading="lazy" src="/assets/images/icons/cookieclicker.webp" style="border-radius: 25px;" />
           </a>
