--- a/static/play.html
+++ b/static/play.html
@@ -30,7 +30,7 @@
   <body>
     <div class="header2">
       <br />
-      <a class="logo" href="/../"> Interstellar </a>
+      <a class="logo" href="/../"> Project Luma </a>
       <div class="header2-right">
         <a href="web"> Proxy </a>
         <a href="play"> Games </a>
