--- a/static/apps.html
+++ b/static/apps.html
@@ -34,7 +34,7 @@
     <!-- Nav Bar-->
     <div class="header2">
       <br />
-      <a class="logo" href="/../"> Interstellar </a>
+      <a class="logo" href="/../"> Project Luma </a>
       <div class="header2-right">
         <a href="web"> Proxy </a>
         <a href="play"> Games </a>
