--- a/static/play.html
+++ b/static/play.html
@@ -328,7 +328,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://computerclicker.dibiaseproductions.com/'); ab()">
+          <a onclick="go('https://computerclicker.dibiaseproductions.com/')">
             <img loading="lazy" src="/assets/images/icons/ComputerClicker.png" style="border-radius: 25px;" />
           </a>
           <p3> Computer Clicker </p3>
@@ -338,7 +338,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://controls.dibiaseproductions.com/'); ab()">
+          <a onclick="go('https://controls.dibiaseproductions.com/')">
             <img loading="lazy" src="/assets/images/icons/Controls.png" style="border-radius: 25px;" />
           </a>
           <p3> Controls </p3>
