--- a/static/web.html
+++ b/static/web.html
@@ -12,13 +12,13 @@
 <link rel="stylesheet" href="assets/css/searchbar.css" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6840529569014734" crossorigin="anonymous"></script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYTCV2NJT6"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-WKJQ5QHQTJ');
+  gtag('config', 'G-ZYTCV2NJT6');
 </script>
 </head>
    <body>
