--- a/static/index.html
+++ b/static/index.html
@@ -12,17 +12,14 @@
     <link rel="shortcut icon" href="assets/images/branding/in.png" type="image/x-icon">
     <link rel="stylesheet" href="resources/css/home.css"/>
     <link rel="stylesheet" href="assets/css/nav.css">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
-<script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BX1R0Q6FP4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3KEJ0HLB78');
+  gtag('config', 'G-BX1R0Q6FP4');
 </script>
   </head>
   <body>
