--- a/static/play.html
+++ b/static/play.html
@@ -17,14 +17,14 @@
     <link href="assets/css/nav.css" rel="stylesheet" />
     <link href="assets/css/apps.css" rel="stylesheet" />
     <link href="assets/css/searchbar.css" rel="stylesheet" />
-   <!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-11T49NF6F4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-3KEJ0HLB78');
+
+  gtag('config', 'G-11T49NF6F4');
 </script>
   </head>
   <body>
