--- a/static/chat.html
+++ b/static/chat.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="assets/css/nav.css" />
       <script src="assets/js/panic.js"></script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DJHN1VNQ7Y"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3KEJ0HLB78');
+  gtag('config', 'G-DJHN1VNQ7Y');
 </script>
   </head>
  	<!--NAVBAR-->
