--- a/static/settings.html
+++ b/static/settings.html
@@ -8,15 +8,14 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
    <script async src="/assets/js/panic.js"></script>
   <script src="assets/js/themecontrol.js"></script>
- <!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7T3R5WJJRV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3KEJ0HLB78');
+  gtag('config', 'G-7T3R5WJJRV');
 </script>
 </head>
 
