--- a/static/cookieconsentpolicy.html
+++ b/static/cookieconsentpolicy.html
@@ -4,14 +4,14 @@
 <head>
 	<title>Cookie Consent Policy</title>
 	<link rel="shortcut icon" href="assets/images/branding/favicon/interstellar.png" />
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PGZH614NHR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3KEJ0HLB78');
+  gtag('config', 'G-PGZH614NHR');
 </script>
 	<style>
 		body, html {
