--- a/static/go.html
+++ b/static/go.html
@@ -6,13 +6,13 @@
     <script src="assets/js/panic.js"></script>
     <!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BXXFB14K33"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3KEJ0HLB78');
+  gtag('config', 'G-BXXFB14K33');
 </script>
 <link rel="stylesheet" href="assets/css/nav.css" />
 
