--- a/static/loading.html
+++ b/static/loading.html
@@ -5,15 +5,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Roboto&display=swap" rel="stylesheet">
-  <!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KEJ0HLB78"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-36TCGHKXKS"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3KEJ0HLB78');
+  gtag('config', 'G-36TCGHKXKS');
 </script>
   <style>
 
