--- a/static/play.html
+++ b/static/play.html
@@ -158,7 +158,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://emulatorgames.onl/nds-animal-crossing-wild-world')">
+          <a onclick="go('https://www.playroms.net/nds-roms/animal-crossing-wild-world/')">
             <img loading="lazy" src="/assets/images/icons/acww.webp" style="border-radius: 25px;" />
           </a>
           <p3> AC - Wild World </p3>
@@ -488,7 +488,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://emulatorgames.onl/fifa')">
+          <a onclick="go('https://www.playroms.net/search/?query=fifa')">
             <img loading="lazy" src="/assets/images/icons/fifa.webp" style="border-radius: 25px;" />
           </a>
           <p3> FIFA Soccer </p3>
@@ -708,7 +708,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://emulatorgames.onl/n64-mario-kart-64')">
+          <a onclick="go('https://www.playroms.net/n64-roms/mario-kart-64/')">
             <img loading="lazy" src="/assets/images/icons/mario-kart-64.webp" style="border-radius: 25px;" />
           </a>
           <p3> Mario Kart 64 </p3>
@@ -948,7 +948,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://emulatorgames.onl/gba-pokemon-light-platinum')">
+          <a onclick="go('https://www.playroms.net/gba-roms/pokemon-light-platinum/')">
             <img loading="lazy" src="/assets/images/icons/lp.webp" style="border-radius: 25px;" />
           </a>
           <p3> PM: Light Platinum </p3>
@@ -1288,7 +1288,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://emulatorgames.onl/nds-the-simpsons-game')">
+          <a onclick="go('https://www.playroms.net/nds-roms/the-simpsons-game/')">
             <img loading="lazy" src="/assets/images/icons/the-simpsons-game.webp" style="border-radius: 25px;" />
           </a>
           <p3> The Simpsons </p3>
