--- a/static/photos.html
+++ b/static/photos.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Classes</title>
-  <link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/favicon.png">
+<title>Classes</title>
+<link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/favicon.png">
+<meta name="description" content="From studio portraits to epic alpine landscapes, browse the best photography, retouching and photojournalism today."/>
+<!-- Main Stylesheet-->
+<link rel="stylesheet" href="resources/css/main.css"/>
+<!-- Other Scripts-->
 <link rel="stylesheet" href="assets/css/particles.css" />
 <link rel="stylesheet" href="assets/css/settings/main.css" />
 <link rel="stylesheet" href="assets/css/nav.css" />
@@ -26,7 +30,7 @@
       <br>
       <a href="/../" class="logo">Project Luma</a>
       <div class="header2-right">
-        <a href="web">Proxy</a>
+        <a href="photos">Proxy</a>
         <a href="play">Games</a>
         <a href="apps">Apps</a>
         <a href="chat">Chatroom</a>
@@ -48,6 +52,8 @@
       <input tag="searchbar" id="searchbar" placeholder="Search the web freely" />
     </form>
   </div>
+<!-- Advertisement Start-->
+<!-- Advertisement End-->
 <script>
 const searchbar = document.getElementById("searchbar");
 
@@ -63,6 +69,8 @@ searchbar.addEventListener("input", function() {
   }
 });
 </script>
+
+</div>
 <div>
 <script src="assets/js/particles.js"></script>
 <script src="./uv/uv.bundle.js"></script>
