--- a/static/settings.html
+++ b/static/settings.html
@@ -2,6 +2,7 @@
   <html lang="en">
   <link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/favicon.png">
   <title>Classes</title>
+  <meta name="description" content="From studio portraits to epic alpine landscapes, browse the best photography, retouching and photojournalism today."/>
   <link rel="stylesheet" href="/assets/css/particles.css" />
   <link rel="stylesheet" href="/assets/css/nav.css" />
   <link rel="stylesheet" href="/assets/css/settings/main2.css"/>
@@ -24,7 +25,7 @@
     <br>
     <a href="/../" class="logo">Project Luma</a>
     <div class="header2-right">
-      <a href="web">Proxy</a>
+      <a href="photos">Proxy</a>
       <a href="play">Games</a>
       <a href="apps">Apps</a>
       <a href="chat">Chatroom</a>
