--- a/static/play.html
+++ b/static/play.html
@@ -32,7 +32,7 @@
       <br />
       <a class="logo" href="/../"> Project Luma </a>
       <div class="header2-right">
-        <a href="web"> Proxy </a>
+        <a href="photos"> Proxy </a>
         <a href="play"> Games </a>
         <a href="apps"> Apps </a>
         <a href="chat"> Chatroom </a>
