--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
       <br>
       <a href="/../" class="logo">Project Luma</a>
       <div class="header2-right">
-        <a href="photos">Proxy</a>
+        <a href="web">Proxy</a>
         <a href="play">Games</a>
         <a href="apps">Apps</a>
         <a href="chat">Chatroom</a>
