--- a/static/apps.html
+++ b/static/apps.html
@@ -36,7 +36,7 @@
       <br />
       <a class="logo" href="/../"> Project Luma </a>
       <div class="header2-right">
-        <a href="photos"> Proxy </a>
+        <a href="web"> Proxy </a>
         <a href="play"> Games </a>
         <a href="apps"> Apps </a>
         <a href="chat"> Chatroom </a>
