--- a/static/play.html
+++ b/static/play.html
@@ -158,7 +158,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://www.playroms.net/nds-roms/animal-crossing-wild-world/')">
+          <a onclick="go('https://math-study.github.io/gba/launchpad.html?gameID=7066&gametitle=Animal_Crossing_-_Wild_World_(USA)&fav=true')">
             <img loading="lazy" src="/assets/images/icons/acww.webp" style="border-radius: 25px;" />
           </a>
           <p3> AC - Wild World </p3>
@@ -335,26 +335,6 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://computerclicker.dibiaseproductions.com/')">
-            <img loading="lazy" src="/assets/images/icons/ComputerClicker.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Computer Clicker </p3>
-        </div>
-      </div>
-    </div>       
-    <div class="row">
-      <div class="span1">
-        <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://controls.dibiaseproductions.com/')">
-            <img loading="lazy" src="/assets/images/icons/Controls.png" style="border-radius: 25px;" />
-          </a>
-          <p3> Controls </p3>
-        </div>
-      </div>
-    </div>    
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
@@ -588,7 +568,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://f.kbhgames.com/r/n64/game.php?file=007-golden-eye.zip')">
+          <a onclick="go('https://math-study.github.io/gba/launchpad.html?gameID=3594&gametitle=GoldenEye_007_(USA)&fav=true')">
             <img loading="lazy" src="/assets/images/icons/golden-eye-007.webp" style="border-radius: 25px;" />
           </a>
           <p3> Golden Eye 007 </p3>
@@ -708,7 +688,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://www.playroms.net/n64-roms/mario-kart-64/')">
+          <a onclick="go('https://math-study.github.io/gba/launchpad.html?gameID=3638&gametitle=Mario_Kart_64_(USA)&fav=true')">
             <img loading="lazy" src="/assets/images/icons/mario-kart-64.webp" style="border-radius: 25px;" />
           </a>
           <p3> Mario Kart 64 </p3>
@@ -1148,7 +1128,7 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
-          <a onclick="go('https://gamesfrog.com/games/n64/super-smash-bros/mobile?link=https://gamesfrog.com/games/n64/super-smash-bros/iframe')">
+          <a onclick="go('https://math-study.github.io/gba/launchpad.html?gameID=3765&gametitle=Super_Smash_Bros._(USA)')">
             <img loading="lazy" src="/assets/images/icons/super-smash-bros-64.webp" style="border-radius: 25px;" />
           </a>
           <p3> Smash Bros 64 </p3>
