--- a/static/play.html
+++ b/static/play.html
@@ -497,7 +497,7 @@
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
           <a onclick="go('https://www.crazygames.com/game/capybara-clicker')">
-            <img loading="lazy" src="/assets/images/icons/capybara.avif" style="border-radius: 25px;" />
+            <img loading="lazy" src="/assets/images/icons/capybara.png" style="border-radius: 25px;" />
           </a>
           <p3> Capybara Clicker </p3>
         </div>
