--- a/static/apps.html
+++ b/static/apps.html
@@ -372,6 +372,12 @@
       function gfn() {
         alert('Geforce NOW is currently having some issues for some users, we are aware of this issue and are working to fix it.')
       }
+      <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '1098073108717514818', // Project Luma
+        channel: '1102263888411643946' // #🌏website
+    })
+</script>
     </script>
   </body>
 </html>
