--- a/static/index.html
+++ b/static/index.html
@@ -76,6 +76,11 @@
           document.getElementById('tab-cloak').value = 'true';
           localStorage.setItem('cloak', 'true');
         }
+        <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '1098073108717514818', // Project Luma
+        channel: '1102263888411643946' // #🌏website
+    })
       </script>
       <div>
         <script src="assets/js/particles.js"></script>
