--- a/static/404.html
+++ b/static/404.html
@@ -88,7 +88,13 @@
             }
         }
     </style>
-      <script src="assets/js/panic.js"></script>
+      <script src="assets/js/panic.js">
+    <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '1098073108717514818', // Project Luma
+        channel: '1102263888411643946' // #🌏website
+    })
+    </script>
 </head>
 <body>
     <div class="container">
