--- a/static/cookieconsentpolicy.html
+++ b/static/cookieconsentpolicy.html
@@ -13,6 +13,11 @@
 
   gtag('config', 'G-PGZH614NHR');
 </script>
+	<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '1098073108717514818', // Project Luma
+        channel: '1102263888411643946' // #🌏website
+    })
 	<style>
 		body, html {
 			width: 100%;
@@ -150,3 +155,4 @@
 		background-color: #0062cc;
 	}
 </style>
+</script>
