--- a/static/play.html
+++ b/static/play.html
@@ -1958,6 +1958,11 @@
       function gfn() {
         alert('Geforce NOW is currently having some issues for some users, we are aware of this issue and are working to fix it.')
       }
+      <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '1098073108717514818', // Project Luma
+        channel: '1102263888411643946' // #🌏website
+    })
     </script>
   </body>
 </html>
