--- a/static/settings.html
+++ b/static/settings.html
@@ -128,5 +128,10 @@
     document.getElementById('Transitions').addEventListener('change', function() {
       localStorage.setItem('Transitions', this.value === 'true' ? 'true' : 'false');
     });
+    <script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '1098073108717514818', // Project Luma
+        channel: '1102263888411643946' // #🌏website
+    })
   </script>
 </html>
