--- a/static/play.html
+++ b/static/play.html
@@ -1455,6 +1455,16 @@
     <div class="row">
       <div class="span1">
         <div class="card animals" loading="lazy" style="padding-top: 5px;">
+          <a onclick="go('https://incognito-au2.lolmath.tk/?link=aHR0cHM6Ly9tYXRoc3Nwb3QuY29tLw%3D%3D')">
+            <img loading="lazy" src="/assets/images/icons/roblox.png" style="border-radius: 25px;" />
+          </a>
+          <p3> Roblox </p3>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span1">
+        <div class="card animals" loading="lazy" style="padding-top: 5px;">
           <a onclick="go('https://robostorm.io')">
             <img loading="lazy" src="/assets/images/icons/robostorm.jpg" style="border-radius: 25px;" />
           </a>
